# Axiom-Coder-Agent

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/scripts/: repair-appimage.sh
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  mcp.rs  models.rs  provider.rs  secrets.rs  tools.rs
src/components/: AppModal.tsx  CloseChoiceDialog.test.tsx  CloseChoiceDialog.tsx  Composer.test.tsx  Composer.tsx  Conversation.test.tsx  Conversation.tsx  DiffView.tsx  Dropdown.test.tsx  Dropdown.tsx  Inspector.tsx  Sidebar.test.tsx  Sidebar.tsx  TerminalPanel.tsx  UpdateBanner.tsx
src/lib/: api.ts  context.test.ts  context.ts  mock.ts  types.ts
src/store/: appStore.test.ts  appStore.ts
src/test/: fixtures.ts  setup.ts
