[package]
name = "axiom"
version = "1.0.4"
description = "Local-first multi-provider AI coding agent desktop app"
authors = ["Axiom Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "axiom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = { version = "0.13.4", features = ["json", "stream", "rustls"] }
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
futures-util = "0.3.32"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
parking_lot = "0.12.5"
keyring = "4.1.5"
dirs = "6.0.0"
url = "2.5.8"
serde_yaml = "0.9.34"

ignore = "0.4"
diffy = "0.4"
sha2 = "0.10"
base64 = "0.22"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }
